tests/ui/type-alias/missing-associated-type-in-trait-object-22434.stderr
error[E0191]: the value of the associated type `A` in `Foo` must be specified
  --> $DIR/missing-associated-type-in-trait-object-22434.rs:6:23
   |
LL |     type A;
   |     ------ `A` defined here
...
LL | type I<'a> = &'a (dyn Foo + 'a);
   |                       ^^^ help: specify the associated type: `Foo<A = Type>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0191`.
